// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-image defaults via gatsby-plugin-sharp custom background color 1`] = `
Object {
  "backgroundColor": "#663399",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png&bg=rgb%3A663399",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png&bg=rgb%3A663399 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png&bg=rgb%3A663399 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png&bg=rgb%3A663399 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp&bg=rgb%3A663399 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp&bg=rgb%3A663399 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp&bg=rgb%3A663399 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image defaults via gatsby-plugin-sharp custom placeholder blurred 1`] = `
Object {
  "backgroundColor": undefined,
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "placeholder": Object {
    "fallback": "data:image/png;base64,bW9ja2VkRmlsZUNvbnRlbnQ=",
  },
  "width": "1646",
}
`;

exports[`gatsby-plugin-image defaults via gatsby-plugin-sharp custom placeholder tracedSVG 1`] = `
Object {
  "backgroundColor": undefined,
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "placeholder": Object {
    "fallback": "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='400'%20height='83'%20viewBox='0%200%20400%2083'%20preserveAspectRatio='none'%3e%3cpath%20d='M32%203L20%208l-1%201-5%204c-5%204-5%208-1%2012s8%204%2013-1c8-7%2023-8%2029-2s11%206%2015%203C80%2014%2054-1%2032%203m302%207c-7%203-7%205-7%2029s0%2024%207%2023c2-1%202-1%202-15l1-13%202-1c6%200%207-1%207-4s-2-5-6-5c-3%200-4-1-3-4%201-2%202-2%207-3%203-1%204-5%202-8-2-2-8-1-12%201m-131%206c-2%201-2%204-2%2017%200%2018%201%2023%204%2025%202%203%2011%204%2013%202%204-3%201-8-4-8-3%200-3-2-3-12l1-7%204-1c4%200%205-1%205-4s-1-4-5-4h-5v-4c0-6-5-8-8-4m101%200v21l1%2019%202%202c3%203%2010%204%2013%203%204-2%202-7-2-8s-5-2-5-12v-8h4c4%200%207-2%207-5s-2-4-7-4h-4v-4c0-4-1-5-4-5l-5%201m87%200v24l1%2022h3c5%200%205-1%205-25V16l-4-1-5%201M98%2023c-18%206-17%2033%202%2038%206%202%2018-2%2018-5%200-4-7-7-8-5H99c-5-4-5-11-1-16%202-3%206-4%2012-2%203%201%203%201%206-1%202-4%201-6-6-8-5-2-6-2-12-1m35%201c-12%202-18%2017-12%2028%209%2018%2036%2010%2036-9%200-14-11-23-24-19m41%201c-4%202-4%202-5%200l-5-1-3%201v36h3c5%200%205-1%206-12%200-11%202-15%206-16%208-3%2011%202%2011%2015%200%2012%200%2013%205%2013s5-1%205-16c-1-11-2-15-7-19-4-3-12-4-16-1m57%200c-13%207-13%2028%200%2035%208%204%2021%202%2025-2%201-2%201-2-1-5-3-2-3-2-6-1-5%202-11%201-14-1-6-4-4-5%2011-5h14v-5c0-14-15-23-29-16m50-1l-6%202h-4c0-2-2-2-4-2l-3%201-1%2018v18l3%201c5%201%205-1%206-12%201-12%202-16%207-17%208-2%2010%202%2011%2016%201%2012%201%2014%206%2013l3-1V48c0-14-1-16-5-21-3-3-9-4-13-3m68%201v15c0%2011%201%2013%203%2016%204%206%2014%208%2021%204%203-2%203-2%204%200s4%203%207%201l1-18c1-18%200-19-5-19-3%200-4%202-4%2012%200%2012-2%2017-9%2017s-8-3-9-17V25l-4-1-5%201m-217%209c-4%203-4%2012%200%2016%203%203%2010%203%2013%200%207-9-3-23-13-16M13%2058c-11%208%207%2024%2028%2024%2011%201%2020-3%2028-10%209-9-1-21-11-13-7%205-11%206-16%206-7%200-10-1-16-6s-8-5-13-1'%20fill='%23639'%20fill-rule='evenodd'/%3e%3c/svg%3e",
  },
  "width": "1646",
}
`;

exports[`gatsby-plugin-image defaults via gatsby-plugin-sharp custom quality 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=42&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=42&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=42&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=42&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=42&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=42&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=42&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image defaults via gatsby-plugin-sharp custom quality by format 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=60&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=60&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=60&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=60&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=42&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=42&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=42&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments custom quality 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=90&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=90&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=90&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=90&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=90&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=90&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=90&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments custom width 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 86,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 420px) 420px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=420&h=86&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=105&h=22&q=50&fm=png 105w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=210&h=43&q=50&fm=png 210w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=420&h=86&q=50&fm=png 420w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=840&h=172&q=50&fm=png 840w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 420px) 420px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=105&h=22&q=50&fm=webp 105w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=210&h=43&q=50&fm=webp 210w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=420&h=86&q=50&fm=webp 420w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=840&h=172&q=50&fm=webp 840w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": 420,
}
`;

exports[`gatsby-plugin-image query arguments default 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments force format 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=jpg",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=jpg 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=jpg 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=jpg 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments layout fixed 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "1646px",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "1646px",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "fixed",
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments layout full width 1`] = `
Object {
  "backgroundColor": "#080808",
  "height": 0.20534629404617255,
  "images": Object {
    "fallback": Object {
      "sizes": "100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=750&h=154&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=750&h=154&q=50&fm=png 750w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1080&h=222&q=50&fm=png 1080w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1366&h=281&q=50&fm=png 1366w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=750&h=154&q=50&fm=webp 750w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1080&h=222&q=50&fm=webp 1080w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1366&h=281&q=50&fm=webp 1366w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "fullWidth",
  "width": 1,
}
`;

exports[`gatsby-plugin-image query arguments placeholder blurred 1`] = `
Object {
  "backgroundColor": undefined,
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "placeholder": Object {
    "fallback": "data:image/png;base64,bW9ja2VkRmlsZUNvbnRlbnQ=",
  },
  "width": "1646",
}
`;

exports[`gatsby-plugin-image query arguments placeholder traced svg 1`] = `
Object {
  "backgroundColor": undefined,
  "height": 338,
  "images": Object {
    "fallback": Object {
      "sizes": "(min-width: 1646px) 1646px, 100vw",
      "src": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png",
      "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=png 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=png 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=png 1646w",
    },
    "sources": Array [
      Object {
        "sizes": "(min-width: 1646px) 1646px, 100vw",
        "srcSet": "https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=412&h=85&q=50&fm=webp 412w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=823&h=169&q=50&fm=webp 823w,
https://images.ctfassets.net:443/k8iqpp6u0ior/3ljGfnpegOnBTFGhV07iC1/94257340bda15ad4ca8462da3a8afa07/347966-contentful-logo-wordmark-dark__1_-4cd185-original-1582664935__1_.png?w=1646&h=338&q=50&fm=webp 1646w",
        "type": "image/webp",
      },
    ],
  },
  "layout": "constrained",
  "placeholder": Object {
    "fallback": "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='400'%20height='83'%20viewBox='0%200%20400%2083'%20preserveAspectRatio='none'%3e%3cpath%20d='M32%203L20%208l-1%201-5%204c-5%204-5%208-1%2012s8%204%2013-1c8-7%2023-8%2029-2s11%206%2015%203C80%2014%2054-1%2032%203m302%207c-7%203-7%205-7%2029s0%2024%207%2023c2-1%202-1%202-15l1-13%202-1c6%200%207-1%207-4s-2-5-6-5c-3%200-4-1-3-4%201-2%202-2%207-3%203-1%204-5%202-8-2-2-8-1-12%201m-131%206c-2%201-2%204-2%2017%200%2018%201%2023%204%2025%202%203%2011%204%2013%202%204-3%201-8-4-8-3%200-3-2-3-12l1-7%204-1c4%200%205-1%205-4s-1-4-5-4h-5v-4c0-6-5-8-8-4m101%200v21l1%2019%202%202c3%203%2010%204%2013%203%204-2%202-7-2-8s-5-2-5-12v-8h4c4%200%207-2%207-5s-2-4-7-4h-4v-4c0-4-1-5-4-5l-5%201m87%200v24l1%2022h3c5%200%205-1%205-25V16l-4-1-5%201M98%2023c-18%206-17%2033%202%2038%206%202%2018-2%2018-5%200-4-7-7-8-5H99c-5-4-5-11-1-16%202-3%206-4%2012-2%203%201%203%201%206-1%202-4%201-6-6-8-5-2-6-2-12-1m35%201c-12%202-18%2017-12%2028%209%2018%2036%2010%2036-9%200-14-11-23-24-19m41%201c-4%202-4%202-5%200l-5-1-3%201v36h3c5%200%205-1%206-12%200-11%202-15%206-16%208-3%2011%202%2011%2015%200%2012%200%2013%205%2013s5-1%205-16c-1-11-2-15-7-19-4-3-12-4-16-1m57%200c-13%207-13%2028%200%2035%208%204%2021%202%2025-2%201-2%201-2-1-5-3-2-3-2-6-1-5%202-11%201-14-1-6-4-4-5%2011-5h14v-5c0-14-15-23-29-16m50-1l-6%202h-4c0-2-2-2-4-2l-3%201-1%2018v18l3%201c5%201%205-1%206-12%201-12%202-16%207-17%208-2%2010%202%2011%2016%201%2012%201%2014%206%2013l3-1V48c0-14-1-16-5-21-3-3-9-4-13-3m68%201v15c0%2011%201%2013%203%2016%204%206%2014%208%2021%204%203-2%203-2%204%200s4%203%207%201l1-18c1-18%200-19-5-19-3%200-4%202-4%2012%200%2012-2%2017-9%2017s-8-3-9-17V25l-4-1-5%201m-217%209c-4%203-4%2012%200%2016%203%203%2010%203%2013%200%207-9-3-23-13-16M13%2058c-11%208%207%2024%2028%2024%2011%201%2020-3%2028-10%209-9-1-21-11-13-7%205-11%206-16%206-7%200-10-1-16-6s-8-5-13-1'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e",
  },
  "width": "1646",
}
`;
